update app and model

--- a/model/first_model.ipynb
+++ b/model/first_model.ipynb
@@ -294,6 +294,48 @@
     "# Export the model\n",
     "learn.export()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_image = '00000004.png'\n",
+    "file_path = path/'mtp'/test_image\n",
+    "img = open_image(file_path)\n",
+    "\n",
+    "# Load model and predict\n",
+    "model = load_learner(path)\n",
+    "pred_class = model.predict(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9986)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.max(model.predict(img)[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
